<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ADD8E6"
    tools:context=".Profile">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:gravity="center_vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_marginStart="30dp"
                android:src="@drawable/img"
                android:layout_width="65dp"
                android:layout_height="65dp" />
            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical">
                <TextView
                    android:layout_marginStart="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:text="@string/status_saya"
                    android:layout_width="280dp"
                    android:layout_height="25dp">
                </TextView>
                <TextView
                    android:layout_marginStart="20dp"
                    android:textSize="15sp"
                    android:text="@string/waktu_saya"
                    android:layout_width="280dp"
                    android:layout_height="25dp">
                </TextView>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical">
                <TextView
                    android:layout_marginStart="30dp"
                    android:textStyle="italic"
                    android:textColor="@color/black"
                    android:text="@string/pembaruan_status"
                    android:layout_width="280dp"
                    android:layout_height="25dp">
                </TextView>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:gravity="center_vertical">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_marginStart="30dp"
                    android:src="@drawable/nana"
                    android:layout_width="65dp"
                    android:layout_height="65dp">
                </de.hdodenhof.circleimageview.CircleImageView>
                <LinearLayout
                    android:layout_width="250dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="vertical">
                    <TextView
                        android:layout_marginStart="20dp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:text="@string/human"
                        android:layout_width="280dp"
                        android:layout_height="25dp">
                    </TextView>
                    <TextView
                        android:layout_marginStart="20dp"
                        android:textSize="10sp"
                        android:text="@string/baru_saja"
                        android:layout_width="280dp"
                        android:layout_height="25dp"
                        tools:ignore="SmallSp">
                    </TextView>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
